--- a/.github/workflows/push-organizers-to-artsdata.yml
+++ b/.github/workflows/push-organizers-to-artsdata.yml
@@ -14,7 +14,7 @@ jobs:
           -H 'Content-Type: application/json' \
           -X POST http://api.artsdata.ca/databus/  \
           --data '{ "artifact": "scenesfrancophones-organizers",
-                    "comment": "scenesfrancophones.ca Organizers",
+                    "comment": "Entities from https://scenesfrancophones.ca/diffuseurs",
                     "publisher": "${{ secrets.PUBLISHER_URI_GREGORY }}",
                     "group": "${{ github.event.repository.name }}",
                     "version": "${{ steps.version.outputs.dumpdate }}",
