updated scraping workflows to trigger artsdata push

--- a/.github/workflows/push-artists-to-artsdata.yml
+++ b/.github/workflows/push-artists-to-artsdata.yml
@@ -1,6 +1,9 @@
 name: Push Artists to Artsdata Databus
 on:
   workflow_dispatch:
+  repository_dispatch:
+    types:
+      - trigger-artists-artsdata-push
 jobs:
   deploy:
     runs-on: ubuntu-latest
