--- a/.github/workflows/push-events-to-artsdata.yml
+++ b/.github/workflows/push-events-to-artsdata.yml
@@ -1,6 +1,9 @@
 name: Push Events to Artsdata Databus
 on:
   workflow_dispatch:
+  repository_dispatch:
+    types:
+      - trigger-events-artsdata-push
 jobs:
   deploy:
     runs-on: ubuntu-latest
