--- a/.github/workflows/scenesfrancophones-artists.yml
+++ b/.github/workflows/scenesfrancophones-artists.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Ruby
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
       with:
-        ruby-version: '3.1'
+        bundler-cache: true
     - run: bundle install
 
     - name: Run Main Script
