--- a/.github/workflows/scenesfrancophones-artists.yml
+++ b/.github/workflows/scenesfrancophones-artists.yml
@@ -12,11 +12,11 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
     - name: Set up Ruby
-      uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
+      uses: ruby/setup-ruby@v1
       with:
         bundler-cache: true
     - name: Run Main Script
-      run: ruby main.rb "https://scenesfrancophones.ca/artistes?page=" "https://scenesfrancophones.ca" "article.node.node--promoted.artiste.artiste--teaser.card" "output/artists.jsonld"
+      run: bundle exec ruby main.rb "https://scenesfrancophones.ca/artistes?page=" "https://scenesfrancophones.ca" "article.node.node--promoted.artiste.artiste--teaser.card" "output/artists.jsonld"
     - name: Commit and Push Changes
       run: |
         git config --local user.email "actions@github.com"
