--- a/.github/workflows/push-entities-to-artsdata.yml
+++ b/.github/workflows/push-entities-to-artsdata.yml
@@ -1,9 +1,20 @@
-name: Push Artists to Artsdata Databus
+name: Push Entities to Artsdata Databus
 on:
   workflow_dispatch:
-  repository_dispatch:
-    types:
-      - trigger-artists-artsdata-push
+  workflow_call:
+    inputs:
+      artifact_name:
+        required: true
+        type: string
+      entity_url:
+        required: true
+        type: string
+      download_url:
+        required: true
+        type: string
+      download_file:
+        required: true
+        type: string
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,12 +27,12 @@ jobs:
           curl \
           -H 'Content-Type: application/json' \
           -X POST http://api.artsdata.ca/databus/  \
-          --data '{ "artifact": "scenesfrancophones-artists",
-                    "comment": "Entities from https://scenesfrancophones.ca/artistes",
+          --data '{ "artifact": "${{ inputs.artifact_name }}",
+                    "comment": "Entities from ${{ inputs.entity_url }}",
                     "publisher": "${{ secrets.PUBLISHER_URI_GREGORY }}",
                     "group": "${{ github.event.repository.name }}",
                     "version": "${{ steps.version.outputs.dumpdate }}",
-                    "downloadUrl": "https://raw.githubusercontent.com/culturecreates/artsdata-planet-scenesfrancophones/main/output/artists.jsonld",
-                    "downloadFile": "artists.jsonld",
+                    "downloadUrl": "${{ inputs.download_url }}",
+                    "downloadFile": "${{ inputs.download_file }}",
                     "reportCallbackUrl": "https://huginn-staging.herokuapp.com/users/1/web_requests/273/databus"
-                  }'    
+                  }'
