Updated to use artsdata-pipeline workflow

--- a/.github/workflows/scenesfrancophones-events.yml
+++ b/.github/workflows/scenesfrancophones-events.yml
@@ -26,12 +26,15 @@ jobs:
         git push
 
   artsdata-push:
+    runs-on: ubuntu-latest
     needs: fetch-and-commit-data
-    uses: culturecreates/artsdata-planet-scenesfrancophones/.github/workflows/push-entities-to-artsdata.yml@main
-    with:
-      artifact_name: scenesfrancophones-events
-      entity_url: https://scenesfrancophones.ca/spectacles
-      download_url: https://raw.githubusercontent.com/culturecreates/artsdata-planet-scenesfrancophones/main/output/events.jsonld
-      download_file: events.jsonld
-    secrets:
-      publisher_uri: ${{ secrets.PUBLISHER_URI_GREGORY }}
+    steps:
+      - name: Action setup
+        uses: culturecreates/artsdata-pipeline-action@v1.0.0
+        with:
+          artifact_name: scenesfrancoprones-events
+          page_url: https://scenesfrancophones.ca/spectacles
+          publisher_uri: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          download_uri: "https://raw.githubusercontent.com/culturecreates/artsdata-planet-scenesfrancophones/main/output/events.jsonld"
+          download_file: events.jsonld
+          group: "artsdata-planet-scenesfrancophones"
