--- a/.github/workflows/scenesfrancophones-artists.yml
+++ b/.github/workflows/scenesfrancophones-artists.yml
@@ -30,12 +30,9 @@ jobs:
     needs: fetch-and-commit-data
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.0.0
+        uses: culturecreates/artsdata-pipeline-action@v1.1.0
         with:
-          artifact_name: scenesfrancoprones-artists
-          page_url: https://scenesfrancophones.ca/artistes
-          publisher_uri: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          download_uri: "https://raw.githubusercontent.com/culturecreates/artsdata-planet-scenesfrancophones/main/output/artists.jsonld"
-          download_file: artists.jsonld
-          group: "artsdata-planet-scenesfrancophones"
+          artifact: scenesfrancoprones-artists
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadUrl: "https://raw.githubusercontent.com/culturecreates/artsdata-planet-scenesfrancophones/main/output/artists.jsonld"
       
