--- a/.github/workflows/scenesfrancophones-organizers.yml
+++ b/.github/workflows/scenesfrancophones-organizers.yml
@@ -30,11 +30,8 @@ jobs:
     needs: fetch-and-commit-data
     steps:
       - name: Action setup
-        uses: culturecreates/artsdata-pipeline-action@v1.0.0
+        uses: culturecreates/artsdata-pipeline-action@v1.1.0
         with:
-          artifact_name: scenesfrancoprones-organizers
-          page_url: https://scenesfrancophones.ca/diffuseurs
-          publisher_uri: "${{ secrets.PUBLISHER_URI_GREGORY }}"
-          download_uri: "https://raw.githubusercontent.com/culturecreates/artsdata-planet-scenesfrancophones/main/output/organizers.jsonld"
-          download_file: organizers.jsonld
-          group: "artsdata-planet-scenesfrancophones"
+          artifact: scenesfrancoprones-organizers
+          publisher: "${{ secrets.PUBLISHER_URI_GREGORY }}"
+          downloadUrl: "https://raw.githubusercontent.com/culturecreates/artsdata-planet-scenesfrancophones/main/output/organizers.jsonld"
