--- a/.github/workflows/scenesfrancophones-events.yml
+++ b/.github/workflows/scenesfrancophones-events.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   fetch-and-commit-data:
     runs-on: ubuntu-latest
+    outputs:
+      changes: ${{ steps.check-changes.outputs.HAS_CHANGES }}
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
@@ -17,7 +19,17 @@ jobs:
         bundler-cache: true
     - name: Run Main Script
       run: bundle exec ruby main.rb https://scenesfrancophones.ca/spectacles?page= https://scenesfrancophones.ca div.title output/events.jsonld
+
+    - name: Check for file changes
+      id: check-changes
+      run: |
+        if [ -n "$(git diff --cached outputs/events.jsonld)" ]; then
+          echo "HAS_CHANGES=true" >> $GITHUB_OUTPUT
+        fi
+      shell: bash
+
     - name: Commit and Push Changes
+      if: steps.check-changes.outputs.HAS_CHANGES == 'true'
       run: |
         git config --local user.email "actions@github.com"
         git config --local user.name "GitHub Actions"
@@ -29,6 +41,7 @@ jobs:
   artsdata-push:
     runs-on: ubuntu-latest
     needs: fetch-and-commit-data
+    if: needs.fetch-and-commit-data.outputs.changes == 'true'
     steps:
       - name: Action setup
         uses: culturecreates/artsdata-pipeline-action@v1.1.0
