--- a/.github/workflows/scenesfrancophones-entities.yml
+++ b/.github/workflows/scenesfrancophones-entities.yml
@@ -18,12 +18,19 @@ jobs:
       run: |
         curl https://scenesfrancophones.ca/donneesouvertes/evenements.json > output/events.jsonld \
         curl https://scenesfrancophones.ca/donneesouvertes/artistes.json > output/artists.jsonld \
-        curl https://scenesfrancophones.ca/donneesouvertes/lieux.json > output/places.jsonld
+        curl https://scenesfrancophones.ca/donneesouvertes/lieux.json > output/places.jsonld \
+        curl https://scenesfrancophones.ca/donneesouvertes/diffuseurs.json > output/presenters.jsonld 
+
+    # http://schema.org/EntertainmentBusiness is not allowed in Artsdata because it is a subclass of schema:Organization and schema:Place
+    # Artsdata automatically transforms schema:EntertainmentBusiness to schema:Place which would be wrong for this data source.
+    - name: Replace EntertainmentBusiness with Organization 
+      run: |
+        sed -i '' 's/EntertainmentBusiness/Organization/g'  output/presenters.jsonld  
 
     - name: combine-jsonld
       run : |
         cd output
-        jq -s '[ .[] | .[] ]' artists.jsonld events.jsonld places.jsonld > combined.jsonld
+        jq -s '[ .[] | .[] ]' artists.jsonld events.jsonld places.jsonld presenters.jsonld > combined.jsonld
 
     - name: Check for file changes
       id: check-changes
