--- a/.github/workflows/scenesfrancophones-entities.yml
+++ b/.github/workflows/scenesfrancophones-entities.yml
@@ -19,7 +19,11 @@ jobs:
         curl https://scenesfrancophones.ca/donneesouvertes/evenements.json > output/events.jsonld 
         curl https://scenesfrancophones.ca/donneesouvertes/artistes.json > output/artists.jsonld 
         curl https://scenesfrancophones.ca/donneesouvertes/lieux.json > output/places.jsonld 
-        curl https://scenesfrancophones.ca/donneesouvertes/diffuseurs.json > output/presenters.jsonld   
+        curl https://scenesfrancophones.ca/donneesouvertes/diffuseurs.json > output/presenters.jsonld
+    
+    - name: List downloaded files
+      run: |
+        ls -lah output
 
     # http://schema.org/EntertainmentBusiness is not allowed in Artsdata because it is a subclass of schema:Organization and schema:Place
     # Artsdata automatically transforms schema:EntertainmentBusiness to schema:Place which would be wrong for this data source.
